--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,31 @@
 body{
     margin: 0%;
+    font-family:sans-serif;
 }
+.formSection{
+    text-align: center;
+    padding-top: 2rem;
 
+}
 form{
     width: 50%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     margin: auto;
-    padding-top: 2rem;
+    gap: 10px;
 }
 form > div{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    gap: 10px;
 }
 .input {
     width: 45%;
+}
+.removeAddressBtn{
+    flex-grow: 0.95;
 }
 .clientSection{
     padding: 2rem 5rem;
